--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -22,3 +22,11 @@ spring.servlet.multipart.enabled= true
 spring.servlet.multipart.file-size-threshold = 2KB
 spring.servlet.multipart.max-file-size = 100MB
 spring.servlet.multipart.max-request-size= 100MB
+
+#Spring mail properties
+spring.mail.host = smtp.gmail.com
+spring.mail.port = 587
+spring.mail.username = jojekgobbany@gmail.com
+spring.mail.password = ztvk fows vxqz tqnw
+spring.mail.properties.mail.smtp.auth = true
+spring.mail.properties.mail.smtp.starttls.enable = true
