Password reset and changing

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,7 +17,7 @@ spring.jpa.hibernate.ddl-auto = update
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQLDialect
 
 #Web properties
-spring.mvc.format.date-time = yyyy.MM.dd HH:mm
+#spring.mvc.format.date-time = yyyy.MM.dd HH:mm
 spring.servlet.multipart.enabled= true
 spring.servlet.multipart.file-size-threshold = 2KB
 spring.servlet.multipart.max-file-size = 100MB
@@ -30,3 +30,11 @@ spring.mail.username = jojekgobbany@gmail.com
 spring.mail.password = ztvk fows vxqz tqnw
 spring.mail.properties.mail.smtp.auth = true
 spring.mail.properties.mail.smtp.starttls.enable = true
+
+#Thymeleaf properties
+spring.thymeleaf.prefix=classpath:/templates/
+spring.thymeleaf.suffix=.html
+spring.thymeleaf.mode=HTML5
+spring.thymeleaf.encoding=UTF-8
+spring.thymeleaf.content-type=text/html
+spring.thymeleaf.cache=true
