Continue providing tests for services

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,6 +9,7 @@ spring.datasource.username = root
 spring.datasource.password = p00rGe()n
 spring.datasource.driver-class-name = com.mysql.cj.jdbc.Driver
 spring.jpa.show-sql = true
+spring.jpa.properties.hibernate.format_sql = true
 
 #Switch to `none` https://stackoverflow.com/questions/42135114/how-does-spring-jpa-hibernate-ddl-auto-property-exactly-work-in-spring
 spring.jpa.hibernate.ddl-auto = update
@@ -18,7 +19,7 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQLDialect
 
 #Web properties
 #spring.mvc.format.date-time = yyyy.MM.dd HH:mm
-spring.servlet.multipart.enabled= true
+spring.servlet.multipart.enabled = true
 spring.servlet.multipart.file-size-threshold = 2KB
 spring.servlet.multipart.max-file-size = 100MB
 spring.servlet.multipart.max-request-size= 100MB
