The location API key will now be obtained from the application.yml file

--- a/.env.dev
+++ b/.env.dev
@@ -24,3 +24,6 @@ UI_APP_URL=http://localhost:4200/
 # JWT
 JWT_SECRET=${JWT_SECRET}
 JWT_EXPIRATION_TIME=86400000
+
+# API
+API_LOCATION_KEY=${API_LOCATION_KEY}
